--- a/asf_theme/main.html
+++ b/asf_theme/main.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
-
+{% block styles %}
+    {{block.super}}
+    <link rel="stylesheet" href="{{ 'assets/stylesheets/asf.css' | url }}">
+{% endblock %}
 {% block libs %}
 {{ super() }}
 <script src="https://fbm.earthdata.nasa.gov/for/ASF/feedback.js" type="text/javascript"></script>
