use jinja2 not django super

--- a/asf_theme/main.html
+++ b/asf_theme/main.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block styles %}
-    {{block.super}}
+    {{ super() }}
     <link rel="stylesheet" href="{{ 'assets/stylesheets/asf.css' | url }}">
 {% endblock %}
 {% block libs %}
