--- a/asf_theme/main.html
+++ b/asf_theme/main.html
@@ -10,4 +10,8 @@
   feedback.init({showIcon: false});
 </script>
 {% endblock %}
+{% block scripts %}
+    {{ super() }}
+    <script src="{{ assets/javascripts/expert-rec-search.js | url }}"></script>
+{% endblock %}
 <ci-search></ci-search>
