sting my string

--- a/asf_theme/main.html
+++ b/asf_theme/main.html
@@ -12,6 +12,6 @@
 {% endblock %}
 {% block scripts %}
     {{ super() }}
-    <script src="{{ assets/javascripts/expert-rec-search.js | url }}"></script>
+    <script src="{{ 'assets/javascripts/expert-rec-search.js' | url }}"></script>
 {% endblock %}
 <ci-search></ci-search>
