--- a/asf_theme/main.html
+++ b/asf_theme/main.html
@@ -5,10 +5,15 @@
 {% endblock %}
 {% block libs %}
 {{ super() }}
-<script src="https://fbm.earthdata.nasa.gov/for/ASF/feedback.js" type="text/javascript"></script>
-<script type="text/javascript">
-  feedback.init({showIcon: false});
+ <script>
+ // This prevents the FBM flyout banner from appearing on the side of the page.
+feedback.init({showIcon: false});
 </script>
+
+<script src="https://cdn.earthdata.nasa.gov/tophat2/tophat2.js"
+        id="earthdata-tophat-script"
+        data-show-fbm="true"
+        data-fbm-subject-line="Help with my app"></script>
 {% endblock %}
 {% block scripts %}
     {{ super() }}
