Update feedback module subject line

--- a/asf_theme/main.html
+++ b/asf_theme/main.html
@@ -15,7 +15,7 @@ feedback.init({showIcon: false});
         id="earthdata-tophat-script"
         data-show-fbm="true"
         data-show-status="false"
-        data-fbm-subject-line="Help with my app"
+        data-fbm-subject-line="How can we help you?"
         data-current-daac="ASF DAAC">
 </script>
 {% endblock %}
