--- a/asf_theme/main.html
+++ b/asf_theme/main.html
@@ -1,3 +1,4 @@
+<!-- Extends https://github.com/squidfunk/mkdocs-material/blob/9.4.2/src/templates/base.html -->
 {% extends "base.html" %}
 {% block styles %}
     {{ super() }}
